Task 2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-front-end-deployment
  labels:
    app: web-front-end
spec:
  selector:
    matchLabels:
      app: web-front-end
  replicas: 1
  template:
    metadata:
      labels:
        app: web-front-end
    spec:
      containers:
      - name: web-front-end
        image: square/task2
        imagePullPolicy: Never  
        ports:
        - containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-server-deployment
  labels:
    app: application-server
spec:
  selector:
    matchLabels:
      app: application-server
  replicas: 1
  template:
    metadata:
      labels:
        app: application-server
    spec:
      containers:
      - name: application-server
        image: square/task2-python
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-server-deployment
  labels:
    app: database-server
spec:
  selector:
    matchLabels:
      app: database-server
  replicas: 1
  template:
    metadata:
      labels:
        app: database-server
    spec:
      containers:
      - name: database-server
        image: mysql:8.0.33-debian
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-pv-storage
          mountPath: /var/lib/mysql

      volumes:
      - name: mysql-pv-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
