Task 2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-front-end-service
spec:
  selector:
    app: web-front-end
  ports:
  - name: web-front-end-ports
    protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
---

apiVersion: v1
kind: Service
metadata:
  name: application-server-service
spec:
  selector:
    app: application-server
  ports:
  - name: application-server-ports
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
---

apiVersion: v1
kind: Service
metadata:
  name: database-server-service
spec:
  selector:
    app: database-server
  ports:
  - name: database-server-ports
    protocol: TCP
    port: 3306
    targetPort: 3306
  type: NodePort
