Task 2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-front-end-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: squareshift.task2.app
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-front-end-service
              port: 
                number: 80
